# anyFFT

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  run_tests.py  setup.py
.github/workflows/: ci.yml
anyFFT/: __init__.py
benchmarks/: benchmark_performance.py
cpp/bindings/: module.cpp
cpp/fft/backends/: cufft_mpi.cu  cufft_mpi.cuh  cufft_serial.cu  cufft_serial.cuh  fftw_mpi.cpp  fftw_mpi.hpp  fftw_serial.cpp  fftw_serial.hpp
cpp/fft/includes/: cufft_mpi.cuh  cufft_serial.cuh  fft_base.hpp  fftw_mpi.hpp  fftw_serial.hpp  mpi_utils.hpp
cpp/include/anyfft/: common.hpp  cufft_mpi.cuh  cufft_serial.cuh  fft_base.hpp  fftw_mpi.hpp  fftw_serial.hpp  mpi_utils.hpp
cpp/include/anyfft/core/: common.hpp  fft_base.hpp  mpi_utils.hpp
cpp/include/anyfft/cpu/: fftw.hpp  fftw_mpi.hpp
cpp/include/anyfft/gpu/: cufftmp.cuh  gpufft.cuh  gpufft_dist.cuh  translations.cuh
cpp/src/: module.cpp
cpp/src/cpu/: fftw.cpp  fftw_mpi.cpp
cpp/src/cufft/: cufft_mpi.cu  cufft_serial.cu
cpp/src/fftw/: fftw_mpi.cpp  fftw_serial.cpp
cpp/src/gpu/: cufftmp.cu  gpufft.cu  gpufft_dist.cu
python/anyFFT/: __init__.py
src/anyFFT/: __init__.py  cli.py
src/anyFFT/benchmarks/: benchmark_performance.py
src/anyFFT/tests/: conftest.py  run_tests.py  test_utils.py
src/anyFFT/tests/distributed/: test_cufftmp.py  test_fftw_mpi.py
src/anyFFT/tests/local/: test_fftw.py  test_gpufft.py
src/anyFFT/tests/mpi/: test_cufft_mpi.py  test_fftw_mpi.py
src/anyFFT/tests/serial/: test_cufft_serial.py  test_fftw_serial.py
src/bindings/: module.cpp
src/fft/: fft.cpp  fft.hpp  fft_base.hpp
src/fft/backends/: fftw_serial.cpp  fftw_serial.hpp
tests/: test_cufft_mpi.py  test_cufft_serial.py  test_fftw_mpi.py  test_fftw_serial.py  test_serial.py  test_utils.py
tests/mpi/: test_cufft_mpi.py  test_fftw_mpi.py
tests/serial/: test_cufft_serial.py  test_fftw_serial.py
