[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "pybind11>=2.10",
    "numpy",
    "mpi4py; platform_system!='Windows'"
]
build-backend = "setuptools.build_meta"

[project]
name = "anyFFT"
version = "0.1.1"
authors = [
    {name="5hashN"}
]
description = "Serial and Parallel FFT bindings with pybind11 for CPU/GPU"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pybind11"
]

[project.optional-dependencies]
mpi = ["mpi4py"]

[project.urls]
homepage = "https://github.com/5hashN/anyFFT"
