[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "pybind11>=2.13",
    "numpy>=2.0.0",
    "mpi4py>=3.1.0; platform_system!='Windows'"
]
build-backend = "setuptools.build_meta"

[project]
name = "anyFFT"
version = "0.1.4"
authors = [
    {name="5hashN"}
]
description = "Serial and Parallel FFT bindings with pybind11 for CPU/GPU"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=2.0.0",
]
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Private :: Do Not Upload"
]

[project.optional-dependencies]
mpi = ["mpi4py>=3.1.0"]
gpu = ["cupy-cuda12x"]

[project.urls]
homepage = "https://github.com/5hashN/anyFFT"

[tool.setuptools.packages.find]
where = ["src"]