[build-system]
requires = [
    "scikit-build-core>=0.8.0",
    "pybind11>=2.13",
    "numpy>=2.0.0"
]
build-backend = "scikit_build_core.build"

[project]
name = "anyFFT"
version = "0.1.12"
authors = [
    {name="5hashN"}
]
description = "Serial and Parallel FFT bindings with pybind11 for CPU/GPU"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0.0",
]
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Private :: Do Not Upload"
]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-mpi", "mpi4py>=3.1.0"]
mpi = ["mpi4py>=3.1.0"]

[project.urls]
homepage = "https://github.com/5hashN/anyFFT"

[project.scripts]
anyfft-test = "anyFFT.cli:run_tests"
anyfft-bench = "anyFFT.cli:run_benchmarks"

[tool.scikit-build]
wheel.packages = ["src/anyFFT"]
cmake.build-type = "Release"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["src/anyFFT/tests"]
addopts = "--strict-markers"
markers = [
    "cpu: marks tests that run purely on the host",
    "gpu: marks tests that require a CUDA/ROCm device",
    "mpi: marks tests that require MPI (run with mpiexec)"
]
